fixed the underline in notification and z-index issue in portfolio sidebar

--- a/components/PortfolioPage/portfolioSideBar.css
+++ b/components/PortfolioPage/portfolioSideBar.css
@@ -75,7 +75,6 @@
 
 .folder-dropdown-container{
     position: relative;
-    z-index: 1000;
 }
 
 .folder-dropdown{
